# skillsm

./: .gitignore  Cargo.toml  README.md  flake.nix
src/: error.rs  lib.rs  main.rs
src/app/: events.rs  mod.rs  state.rs
src/data/: client.rs  mod.rs  models.rs  parse.rs
src/ui/: mod.rs
src/ui/widgets/: detail.rs  help.rs  install_modal.rs  mod.rs  skill_list.rs  status.rs  tabs.rs
