[package]
name = "skillsm"
version = "0.1.0"
edition = "2021"

[lib]
name = "skillsm"
path = "src/lib.rs"

[[bin]]
name = "skillsm"
path = "src/main.rs"

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"
tui-markdown = "0.3"

# Async + HTTP
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "process"] }
reqwest = { version = "0.12", features = ["json", "gzip", "rustls-tls"] }

# Parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
scraper = "0.22"
regex = "1"

# Search
fuzzy-matcher = "0.3"

# Errors
thiserror = "2"
anyhow = "1"
